# hdd-rs

./: Cargo.toml
drivedb-bench/: Cargo.toml
sample-scsi/: Cargo.toml
src/: lib.rs
src/ata/: misc.rs  mod.rs
src/ata/data/: health.rs  id.rs
src/ata/data/attr/: mod.rs  raw.rs
src/device/: linux.rs
src/drivedb/: drivedb.rs  loader.rs  mod.rs  parser.rs  vendor_attribute.rs
src/scsi/: linux.rs  mod.rs  pages.rs
src/scsi/data/: inquiry.rs  log_page.rs
src/scsi/data/sense/: descriptor.rs  fixed.rs  mod.rs
src/scsi/data/vpd/: device_id.rs
