[package]
name = "hdd"
description = "hdd: instruments for querying ATA and SCSI disks"
version = "0.10.0"
authors = ["vthriller <unixway.drive+rs@gmail.com>"]
edition = "2024"
repository = "https://github.com/vthriller/hdd-rs"
license = "MPL-2.0"
readme = "README.md"

[workspace]
members = ["sample-scsi", "drivedb-bench"]

[dependencies]
libc = "0.2"
nom = "^8.0"
regex = "1.12.2"
byteorder = "1"
quick-error = "2.0.1"
log = "0.4"

# feature: serializable
serde = { version = "1.0.228", optional = true }
serde_derive = { version = "1.0.228", optional = true }

# feature: bin
clap = { version = ">=0.6.6", optional = true }
serde_json = { version = "1.0.149", optional = true }
separator = { version = "0.4.1", optional = true }
number_prefix = { version = "0.4.0", optional = true }
prettytable-rs = { version = "^0.10", optional = true }
env_logger = { version = "0.11.8", optional = true }
lazy_static = { version = "1.5", optional = true }

[features]
default = []
serializable = ["serde", "serde_derive"]
# XXX 'bin' feature depends on 'serializable'; for now this is reflected in [bin].required-features
bin = ["clap", "serde_json", "separator", "number_prefix", "prettytable-rs", "env_logger", "lazy_static"]
cargo-clippy = []

[target.'cfg(target_os = "freebsd")'.build-dependencies]
bindgen = "0.72.1"

[[bin]]
name = "hdd"
required-features = ["bin", "serializable"]
doc = false
